added post update

--- a/client/views/includes/header.html
+++ b/client/views/includes/header.html
@@ -3,16 +3,20 @@
     <div class="navbar-inner">
       <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-coll
 apse">
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-    </a>
-    <a class="brand" href="{{pathFor 'postsList'}}">Microscope</a>
-    <div class="nav-collapse collapse">
-      <ul class="nav pull-right">
-        <li>{{>loginButtons}}</li>
-      </ul>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </a>
+      <a class="brand" href="{{pathFor 'postsList'}}">Microscope</a>
+      <div class="nav-collapse collapse">
+        <ul class="nav">
+          <li><a href="{{pathFor 'postSubmit'}}">New</a>
+          </li>
+        </ul>
+        <ul class="nav pull-right">
+          <li>{{loginButtons}}</li>
+        </ul>
+      </div>
     </div>
-  </div>
   </header>
 </template>
