--- a/client/views/includes/header.html
+++ b/client/views/includes/header.html
@@ -14,7 +14,7 @@ apse">
           </li>
         </ul>
         <ul class="nav pull-right">
-          <li>{{loginButtons}}</li>
+          <li>{{>loginButtons}}</li>
         </ul>
       </div>
     </div>
